--- a/dockerfile119
+++ b/dockerfile119
@@ -2,7 +2,7 @@ FROM ubuntu:16.04
 
 RUN  apt-get update
 RUN apt-get install -y wget
-RUN apt-get -y install gcc-c++ make
+RUN apt-get install -y gcc-c++ make
 RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
 RUN source $HOME/.bashrc && nvm install v8.12.0
 RUN ln -s $HOME/.nvm/versions/node/v8.12.0/bin/node /usr/bin/node
